--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         
     </head>
     <body>
+
+        <p> this is testing page</p>
 <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
@@ -36,6 +38,5 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-        <p> this is test page</p>
     </body>
 </html>
